--- a/HTML/basics.html
+++ b/HTML/basics.html
@@ -2,12 +2,93 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+
+    <!-- bold tag -->
+    <b> This is a bold tag </b>
+    <strong>This a bold tag</strong>
+
+    <br> <!-- to break the cont line -->
+
+    <!-- italic tag -->
+    <i>This is an italic tag</i>
+    <em>This is an emphasized tag</em>
+
+    <br>
+
+    <!-- underline tag -->
+    <u>This is an underline tag</u>
+
+    <br>
+
+    <!-- strikethough tag -->
+    <s>This is a strikethough tag</s>
+    <del>This is a deleted tag</del>
+
+    <br>
+
+    <!-- small tag -->
+    <small>This is a small tag</small>
+
+    <!-- big tag -->
+    <big>This is a big tag</big>
+
+    <br>
+
+    <!-- superscript and subscript tag -->
+
+    X<sup>2</sup>
+
+    H <sub>2</sub>O
+
+
+    <!-- paragraph tag -->
+
+    <p>
+
+        <!-- Lorem100 -->
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores voluptatum quaerat
+
+
+        molestiae expedita modi, sint animi excepturi. Architecto, porro officia.
+    </p>
+
+
+    <!-- pre : pre performated text tag -->
+
+    <pre>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti est 
+        doloremque dolorum cupiditate alias sapiente libero, tenetur excepturi, 
+        necessitatibus similique perspiciatis, nemo quod laborum? Sed libero quod 
+        non itaque totam dolores aliquid quia dolorem recusandae minima vitae sequi 
+        minus nemo, animi adipisci eaque autem suscipit dolore 
+        voluptatibus dolorum saepe? Assumenda magni exercitationem tempora deserunt 
+        officia asperiores sapiente consequatur voluptatem amet saepe, praesentium 
+        non repellendus enim sequi? Architecto delectus accusantium minus minima, 
+        ipsum blanditiis natus debitis nihil sed nam alias reiciendis molestiae 
+        nulla, aperiam dolorem excepturi impedit ex amet deserunt culpa ad! 
+        Voluptate, error! Accusantium nulla blanditiis at dolor aut? Facere?
+    </pre>
+
+    <!-- font tag -->
+
+    <font color="red" size="10" face="arial">
+        <b>
+            <i>
+                <u>
+                    This is a font tag
+                </u>
+            </i>
+        </b>
+    </font>
+
 </body>
+
 </html>
