--- a/HTML/marquee.html
+++ b/HTML/marquee.html
@@ -18,11 +18,16 @@
     -->
 
     <!-- <marquee behavior="" direction="right" width="300px"> -->
-    <marquee behavior="" direction="right" width="300px" scrollamount="20">
+    <!-- <marquee behavior="" direction="right" width="300px" scrollamount="20"> -->
+    <!-- <marquee behavior="" direction="up" width="300px"> -->
+    <!-- <marquee behavior="" direction="down" width="300px"> -->
+    <!-- <marquee behavior="scroll" direction="right" width="300px" scrollamount="10">     -->
+    <!-- <marquee behavior="slide" direction="right" width="300px" scrollamount="10"> -->
+    <marquee behavior="alternate" direction="right" width="500px" scrollamount="10" loop="3">
 
-            <h1>Welcome to HTML</h1>
+        <h1>Welcome to HTML</h1>
 
-            
+
 
     </marquee>
 
